# HSR

./: .gitignore  README.md  common.py  h_psnr.py  hutils.py  models.py  models2.py  models_ir.py  qn_dataset.py  qn_dataset2.py  qn_dataset3.py  train.py  train2.py  train3.py  train4.py  train_deblur.py  train_ir.py  train_ir2.py  train_sr.py  utils.py
HModels/: discriminator_vgg_arch.py  loss.py
deploy/: CMakeLists.txt  hsisr.cpp
doc/: edvr.txt  tips.txt
preprocess/: degrade.py  process.py  unprocess.py
qn_dataset/: readme.txt  url.txt
scripts/: bmp_2_png.py  deploy.py  dir_2_h5.py  dirs_2_h5.py  downsample.py  edge_test.py  eval.py  eval_ir.py  hsr_video.py  htools.py  ir_video.py  make_EDVR_ds.py  make_h264_ds.py  make_qnSR_ds.py  make_qnSR_ds2.py  make_qnVSR_ds.py  pth_process.py  sharpen.py  single.py  test.py  test_evalfile.py
weights/: hsi_best.pth
